deploy/indextool/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: indextool
  name: indextool
