deploy/indextool/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indextoolinfo
  namespace: indextool
  labels:
    app: indextoolinfo
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.indextoolinfod: semver:~1.0
spec:
  replicas: 0
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: indextoolinfo
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: indextoolinfo
    spec:
      containers:
      - name: indextoolinfod
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/opengauss/index-tool:58898ef560af569881a33d632c2de19ee8df92c7
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /opengauss/application.yaml
          name: configmap-volume
          subPath: application.yaml
      volumes:
      - name: configmap-volume
        configMap:
          name: indextoolconfigmap

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: doc-search
  namespace: indextool
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: doc-search
  template:
    metadata:
      labels:
        app: doc-search
    spec:
      containers:
      - name: doc-search
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/opengauss/doc-search:3ec3f143b2cb567b5929d6e01a8147aa3befb8a3
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 1000m
            memory: 3000Mi
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
