deploy/indextool/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: indextoolservice
  namespace: indextool
spec:
  ports:
  - name: httpport
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: indextoolinfo
  type: ClusterIP
